--- a/asset-sphere/src/css/Navbar.css
+++ b/asset-sphere/src/css/Navbar.css
@@ -15,7 +15,7 @@ This Page is the style elements for the Navbar component.
 	background-color: #79F5AE;
 	padding: 30px 0;
 	overflow: hidden;
-	transition: 0.3s;
+	/* transition: 0.3s; */
 	position: sticky; 
 	width: 100%;
 	top: 0;
