--- a/asset-sphere/src/css/Wallet.css
+++ b/asset-sphere/src/css/Wallet.css
@@ -82,7 +82,7 @@ This Page is the style elements for the Wallet page
     color: white;
   }
 
-  p {
+  .Wallet p {
     color: white;
   }
   
